fixing layout shift from not height on carusels

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -3405,6 +3405,13 @@ figure figure[class="image"] {
         .publication-range .ui-slider__handle-label.min-limit {
           top: .8rem; } }
 
+.youtube-list__videos.slick-slider {
+  height: 329px;
+  overflow: hidden; }
+  @media (min-width: 769px) {
+    .youtube-list__videos.slick-slider {
+      height: 362px; } }
+
 .slicknav_btn {
   position: relative;
   display: block;
